--- a/views/venues.handlebars
+++ b/views/venues.handlebars
@@ -52,17 +52,17 @@
                                 <h1>Selected Theatre Shows</h1>
                                 <div id="theaterinfo">
                                 <div class="form-group">
-                                    <button type="save">Save</button>
-                                    <button type="purchase">Purchase</button>
+                                    <button id="save" type="save">Save</button>
+                                    <button id="purchase" type="purchase">Purchase</button>
                                     <br>
-                                    <select class="form-control" id="exampleFormControlSelect1" >
+                                    <select class="form-control" id="people" >
                                             <option selected># of people</option>
-                                            <option>1</option>
-                                            <option>2</option>
-                                            <option>3</option>
-                                            <option>4</option>
-                                            <option>5</option>
-                                            <option>6</option>
+                                            <option value="1">1</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                            <option value="4">4</option>
+                                            <option value="5">5</option>
+                                            <option value="6">6</option>
                                     </select>
                                     <input id="datepicker" width="276" placeholder="Select date">
                                     </div>
