--- a/views/venues.handlebars
+++ b/views/venues.handlebars
@@ -18,7 +18,7 @@
                             <div id="theatre2" class="theatrepics">
                                 <img value="25">
                                   <a href="assets/images/St. Matins Theatre.PNG" class="theatretext"></a>
-                                    <h4> St.Martins Theatre</h4>
+                                    <h4> St. Martin's Theatre</h4>
                                 </div>
                             </div>
                         </div>
@@ -52,8 +52,8 @@
                                 <h1>Selected Theatre Shows</h1>
                                 <div id="theaterinfo">
                                 <div class="form-group">
-                                    <button id="save" type="save">Save</button>
-                                    <button id="purchase" type="purchase">Purchase</button>
+                                    <button id="save">Save</button>
+                                    <button id="purchase" >Purchase</button>
                                     <br>
                                     <select class="form-control" id="people" >
                                             <option selected># of people</option>
