--- a/public/assets/css/project2.css
+++ b/public/assets/css/project2.css
@@ -1,4 +1,35 @@
 
+@font-face {
+    font-family: desc;
+    src: url(../fonts/Montserrat-Regular.ttf);
+}
+
+/* @font-face {
+    font-family: tickets;
+    src: url(../fonts/Rialto.ttf);
+} */
+
+@font-face {
+    font-family: title;
+    src: url(../fonts/WagnerZip-Change.ttf);
+}
+
+#showListings {
+    font-family: desc;
+}
+
+.showTitle {
+    font-family: title;
+}
+
+#userWindow {
+    font-family: desc;
+}
+
+#customerInfo {
+    font-family: desc;
+}
+
 .body {
     max-height: 700px;
     background-color: rgb(216, 67, 41);
@@ -31,16 +62,17 @@
     left: 0px;
     width: 1500px;
     height: 736px;
-    
 }
 
+.tab-pane {
+    background: white;
+    border-radius: 10px;
+}
 
 .jumbotron {
     position: relative;
     z-index: 8;
-    
 }
-
 
 #curtains {
     z-index: 5 !important;
@@ -137,15 +169,6 @@ h6 {
     text-align: center;
 }
 
-#save {
-    margin: 15px;
-    border-radius: 100px;
-}
-
-#saved {
-    text-align: center;
-}
-
 #selected {
     border-right: solid;
     text-align: center;
@@ -154,8 +177,6 @@ h6 {
 #search {
     border-radius: 100px;
 }
-
-
 
 td {
     max-width: 100px;
